--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
@@ -20,6 +21,7 @@
     "framer-motion": "^10.16.4",
     "intl-messageformat": "^10.5.0",
     "next": "^14.0.4",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "^18.2.0",
